src/objects/Product_Package__c.object
<CustomObject>
    <fields>
        <fullName>Applicable_Account_Types__c</fullName>
        <label>Applicable Account Types</label>
        <picklist>
            <picklistValues>
                <fullName>Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Child_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Packages (Child Product)</relationshipLabel>
        <relationshipName>Child_Product_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Child_Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optional_Price__c</fullName>
        <label>Optional Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Optional_Pricing__c</fullName>
        <label>Optional Pricing</label>
        <picklist>
            <controllingField>Package_Options__c</controllingField>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEPM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Package_Options__c</fullName>
        <label>Package Options</label>
        <picklist>
            <picklistValues>
                <fullName>Included</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Packages</relationshipLabel>
        <relationshipName>Product_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Package</label>
    <nameField>
        <displayFormat>Pack - {00000}</displayFormat>
        <label>Product Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_Optional_Price_for_Optional</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
TEXT(Optional_Pricing__c) != &apos;N/A&apos;,
ISBLANK(Optional_Price__c))</errorConditionFormula>
        <errorDisplayField>Optional_Price__c</errorDisplayField>
        <errorMessage>Optional Price info is required where package pricing is applicable.</errorMessage>
    </validationRules>
</CustomObject>